--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p id="whatOne">What We Look For PT1</p>
     <p id="whatTwo">What We Look For PT2</p>
     <p id="contactAndMin">Contact and Markets</p>
+    <link href="stylesheet.css" rel="stylesheet">
   </body>
 </html>
