--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <textarea cols="40" rows="10" name="Message">
       </textarea> 
       <input type="submit" value="Send" /> 
-      <input type="hidden" name="recipient" value="admin@example.com" />
+      <input type="hidden" name="recipient" value="ziondchen@gmail.com" />
       <input type="hidden" name="subject" value="Subject" />
       <input type="hidden" name="redirect"  value="https://www.example.com/thanks.html" />
       <input type="hidden" name="missing_fields_redirect"  value="https://www.example.com/error.html" />
