--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <br>
     <img src="" id="waterIMG"></img>
     <p id="whatOne">We trade for: <ul style="list-style-type:square;"><li>Gold</li><li>Other Precious Metals</li></ul></p>
-    <p id="whatTwo">We also want to trade for different types of fuel: <ul style="list-style-type:square;"><li>Crude oil</li><li>Bitumen</li><li>JET A-1</li><li>JP54</li><li>MZAUT M-100</li><li>LPG</li><li>And More!</li></ul></p>
+    <p id="whatTwo">We also want to trade for different types of fuel: <br>
+      - Crude oil <br>
+      - Bitumen <br>
+      - JET A-1 <br>
+      - JP54 <br>
+      - MAZUT M-100 <br>
+      - LPG <br>
+      - JP54 <br>
+      - And More!
+      </p>
     <p id="contactAndMin">Contact Information <ul style="list-style-type:circle;"><li>Email: zionventuresasia@gmail.com</li><li></li> and Markets</p>
     <link href="stylesheet.css" rel="stylesheet">
   </body>
