--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1 id="missionStatement">Mission Statement</h1>
     <br>
     <img src="" id="waterIMG"></img>
-    <p id="whatOne">We trade for: <ul style="list-style-type:square;"><li>Gold</li><li>Other Precious Metals</li></ul></p>
+    <p id="whatOne">We trade for: <br>
+      - Gold <br>
+      - And Other Precious Minerals</p>
     <p id="whatTwo">We also want to trade for different types of fuel: <br>
       - Crude oil <br>
       - Bitumen <br>
@@ -20,7 +22,8 @@
       - JP54 <br>
       - And More!
       </p>
-    <p id="contactAndMin">Contact Information <ul style="list-style-type:circle;"><li>Email: zionventuresasia@gmail.com</li><li></li> and Markets</p>
+    <p id="contactAndMin">Contact Information: <br> - Email: zionventuresasia@gmail.com <br> - Phone: +852 68973949 <br><br>
+      Markets:<br> - Philippines<br>- Hong Kong<br>- Macau<br>- China</p>
     <link href="stylesheet.css" rel="stylesheet">
   </body>
 </html>
