--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <img src="" id="logoIMG"></img>
-    <h1 id="missionStatement">Mission Statement</h1>
+    <h1 id="missionStatement">ZionVenturesAsia: A Trading Company for Water Treatment</h1>
     <br>
     <img src="" id="waterIMG"></img>
     <p id="whatOne">We trade for: <br>
