--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <h1 id="missionStatement">ZionVenturesAsia: A Trading Company for Water Treatment</h1>
     <br>
     <img src="" id="waterIMG"></img>
-    <p id="whatOne">We trade for: <br>
-      - Gold <br>
-      - And Other Precious Minerals</p>
-    <p id="whatTwo">We also want to trade for different types of fuel: <br>
-      - Crude oil <br>
-      - Bitumen <br>
-      - JET A-1 <br>
-      - JP54 <br>
-      - MAZUT M-100 <br>
-      - LPG <br>
-      - JP54 <br>
-      - And More!
-      </p>
-    <p id="contactAndMin">Contact Information: <br> - Email: zionventuresasia@gmail.com <br> - Phone: +852 68973949 <br><br>
-      Markets:<br> - Philippines<br>- Hong Kong<br>- Macau<br>- China</p>
+    <h2>
+      <span id="whatOne">We trade for: <br>
+        - Gold <br>
+        - And Other Precious Minerals</p>
+      <span id="whatTwo">We also want to trade for different types of fuel: <br>
+        - Crude oil <br>
+        - Bitumen <br>
+        - JET A-1 <br>
+        - JP54 <br>
+        - MAZUT M-100 <br>
+        - LPG <br>
+        - JP54 <br>
+        - And More!
+      </span>
+    </h2>
+    <h3><span id="contactAndMin">Contact Information: <br> - Email: zionventuresasia@gmail.com <br> - Phone: +852 68973949 <br><br>
+      Markets:<br> - Philippines<br>- Hong Kong<br>- Macau<br>- China</span></h3>
     <link href="stylesheet.css" rel="stylesheet">
   </body>
 </html>
