--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 id="missionStatement">ZionVenturesAsia: A Trading Company for Water Treatment</h1>
     <br>
     <img src="" id="waterIMG"></img>
-    <h2>
+    <div>
       <span id="whatOne">We trade for: <br>
         - Gold <br>
         - And Other Precious Minerals</p>
@@ -23,9 +23,9 @@
         - JP54 <br>
         - And More!
       </span>
-    </h2>
-    <h3><span id="contactAndMin">Contact Information: <br> - Email: zionventuresasia@gmail.com <br> - Phone: +852 68973949 <br><br>
-      Markets:<br> - Philippines<br>- Hong Kong<br>- Macau<br>- China</span></h3>
+  ` </div>
+    <div><span id="contactAndMin">Contact Information: <br> - Email: zionventuresasia@gmail.com <br> - Phone: +852 68973949 <br><br>
+      Markets:<br> - Philippines<br>- Hong Kong<br>- Macau<br>- China</span></div>
     <link href="stylesheet.css" rel="stylesheet">
   </body>
 </html>
